docimagesdir = $(pkgdatadir)/Documentation/doc_images
docimages_DATA = \
achart.png annots.png asterisk.png Back.png BackDisabled.png Below.png \
Below.tif beta.png beta2.png builtin_ext.png FlipBlankHalf.png FlipBlank.png \
FlipClosed.png FlipOpen.png Forward.png ForwardDisabled.png Greece.jpg \
help.png Home.png Hookclose.png Hookindex.png Hookleft.png Hookrecipe.png \
Hookright.png Hookup.png image_problem.png indexed_bullet.png linux.png \
ornament_flower.png ornament_moon.png osx.png override_ext.png ovoid.png \
ovoid2.png paste.png portroyal.png Reveal.png Reveal.tif ruleequal.png \
ruleless.png rulemore.png rulenone.png rulesorting.png sampleweb2.jpg \
sampleweb.jpg skein1.png skein2.png skt1.png skt2.png skt3.png skt4.png \
skt5.png skt6.png skt7.png skt8.png skt9.png skt10.png skt11.png skt12.png \
skt13.png skt14.png Sophia.jpg sound_okay.png testing.png Trans1.png \
Trans2.png unindexed_bullet.png vm_glulx.png vm_z.png vm_z5.png vm_z6.png \
vm_z8.png windows.png
EXTRA_DIST = $(docimages_DATA)
