docimagesdir = $(pkgdatadir)/Documentation/doc_images
docimages_DATA = \
achart.png annots.png asterisk.png Back.png BackDisabled.png Below.png \
Below.tif beta.png beta2.png builtin_ext.png coverflow.png diamond.png \
exf_binary.png exf_text.png FlipBlankHalf.png FlipBlank.png FlipClosed.png \
FlipOpen.png Forward.png ForwardDisabled.png Greece.jpg help.png Home.png \
Hookclose.png Hookindex.png Hookleft.png Hookrecipe.png Hookright.png \
Hookup.png image_problem.png indexed_bullet.png linux.png osx.png \
override_ext.png ovoid.png ovoid2.png paste.png portroyal.png rbarrow.png \
Reveal.png Reveal.tif ruleequal.png ruleless.png rulemore.png rulenone.png \
rulesorting.png sampleweb2.jpg sampleweb.jpg skein1.png skein2.png skt1.png \
skt2.png skt3.png skt4.png skt5.png skt6.png skt7.png skt8.png skt9.png \
skt10.png skt11.png skt12.png skt13.png skt14.png Sophia.jpg sound_okay.png \
testing.png Trans1.png Trans2.png unindexed_bullet.png vm_glulx.png vm_z.png \
vm_z5.png vm_z6.png vm_z8.png wiarrow.png windows.png \
mar07.jpg apr07.jpg jul07.jpg aug07.jpg oct07.jpg nov07.jpg \
Debian_Icon.png Fedora_Icon.png Linux_Icon.png MacOSX_Icon.png \
Solaris_Icon.png Ubuntu_Icon.png Windows_Icon.png
EXTRA_DIST = $(docimages_DATA)
